# next_briefgpt

./: .env.example  .gitignore  AGENT.md  ARCHITECTURE.md  README.md  config.yaml  pyproject.toml
artifacts/2603.15726v1/v1/: pdf.txt  source.tar
docs/: design.md  development.md  product.md
scripts/: inspect_db.py  run_demo.sh  run_extractor.py  run_pipeline.py
src/briefgpt_arxiv/: __init__.py  config.py  db.py  gemini.py  llm_client.py  main.py  models.py  prompts.py  schemas.py  utils.py
src/briefgpt_arxiv/services/: contracts.py  crawler.py  extractor.py  jobs.py  orchestrator.py  parser.py
src/briefgpt_arxiv/util/: __init__.py  arxiv.py  fileutil.py  text.py
src/evaluation/: __init__.py  summary_eval.py
tests/: __init__.py  conftest.py  helpers.py  test_api.py  test_crawler.py  test_db.py  test_extractor.py  test_llm_client.py  test_parser.py  test_prompts.py  test_summary_eval.py
tests/fixtures/: arxiv_feed.xml  doc2json_sample.json  latex_sample.tex  pdf_complex_sample.txt  pdf_fallback.txt
