[project]
name = "briefgpt-arxiv"
version = "0.1.0"
description = "arXiv citation ingestion, parsing, and extraction pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "jinja2>=3.1.6",
  "pypdf>=5.4.0",
  "pydantic>=2.9.0",
  "sqlalchemy>=2.0.36",
  "uvicorn>=0.34.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
